--- a/13-Web-Scraping/Excercise And Notes/120 . Python Web Scraping - Grabbing An Image Webhd 720P-1.ipynb
+++ b/13-Web-Scraping/Excercise And Notes/120 . Python Web Scraping - Grabbing An Image Webhd 720P-1.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c7dd8a3",
+   "id": "skilled-record",
    "metadata": {},
    "source": [
-    "# 120 . Python Web Scraping - Grabbing An Image"
+    "# <span style='color:Yellow'><center> <em>Section 15  Video 119</em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>Grabbing a Class</em></center> </span></h2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c7dd8a3",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## 120 . Python Web Scraping - Grabbing An Image"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2db9044f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Need to scan a page and locate <img> tags"
    ]
@@ -20,7 +33,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "fd7e781b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -31,7 +46,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "a7c5031f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# myrequest.text"
@@ -41,7 +58,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "d79a7ff4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import bs4"
@@ -51,7 +70,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "ecaffc15",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "mysoup = bs4.BeautifulSoup(myrequest.text,\"lxml\")"
@@ -61,7 +82,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4e07f560",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -69,7 +92,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5897fc65",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -77,7 +102,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b0ba45c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -85,7 +112,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "9f638a30",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# imgsoup = mysoup.select('.mw-file-element' )\n",
@@ -98,7 +127,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3fad0d98",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -106,7 +137,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5306c492",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -114,7 +147,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "805b472c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -122,7 +157,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "53fb6c25",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -130,7 +167,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "2f2aabf2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i in soupimages:\n",
@@ -145,7 +184,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b9e8ef1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -153,7 +194,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5923b39",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -161,7 +204,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "1e98fa2c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# firstimage"
@@ -171,7 +216,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "28f5ce18",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -193,7 +240,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2db686a3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -201,23 +250,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d131554",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "ec49510a",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Downloading an Image"
+    "## Downloading an Image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
    "id": "e8b651c6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -228,7 +283,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "edeeb5b9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "myrequest = requests.get(\"https://en.wikipedia.org/wiki/Deep_Blue_(chess_computer)\")"
@@ -238,7 +295,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "ea60872f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sitesoup = bs4.BeautifulSoup(myrequest.text,'lxml')"
@@ -248,7 +307,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "06e67f98",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "imgsoup = sitesoup.select('.mw-file-element')[1]"
@@ -258,7 +319,9 @@
    "cell_type": "code",
    "execution_count": 115,
    "id": "63b0af19",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# computer = sitesoup.select('https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Deep_Blue.jpg/220px-Deep_Blue.jpg')"
@@ -268,7 +331,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "943152d2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -289,7 +354,9 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "3245970c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -310,7 +377,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "e0b39ba3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -331,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "27745383",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -351,7 +422,9 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "a0eee9bf",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# url = \"//upload.wikimedia.org/wikipedia/commons/thumb/b/be/Deep_Blue.jpg/220px-Deep_Blue.jpg\"\n",
@@ -363,7 +436,9 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "ed159ab0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -384,7 +459,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "72e2568f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -405,7 +482,9 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "aabe6dfb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f = open('my_bluecompimage.jpg','wb')"
@@ -415,7 +494,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "3dc4696c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -436,7 +517,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "7fc0f4b3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f.close()"
@@ -446,14 +529,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "361da022",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -467,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
