--- a/13-Web-Scraping/Excercise And Notes/121 . Python Web Scraping - Book Examples Part One.ipynb
+++ b/13-Web-Scraping/Excercise And Notes/121 . Python Web Scraping - Book Examples Part One.ipynb
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "distinguished-registration",
+   "id": "integral-romantic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "empirical-location",
+   "id": "ethical-commons",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "awful-powell",
+   "id": "august-causing",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "original-upgrade",
+   "id": "consolidated-display",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "least-aging",
+   "id": "nonprofit-bottom",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "closing-stopping",
+   "id": "varying-lawrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "premium-apartment",
+   "id": "increasing-sudan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "common-government",
+   "id": "enclosed-lambda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfactory-bargain",
+   "id": "bored-egyptian",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "substantial-queensland",
+   "id": "pursuant-colleague",
    "metadata": {},
    "outputs": [
     {
@@ -783,15 +783,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "failing-enhancement",
+   "id": "sustainable-singles",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "adult-vancouver",
+   "execution_count": 118,
+   "id": "lasting-tobacco",
    "metadata": {},
    "outputs": [
     {
@@ -825,6 +825,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 1 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -852,6 +854,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 2 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -879,6 +883,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 3 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -906,6 +912,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 4 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -933,6 +941,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 5 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -960,6 +970,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 6 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -987,6 +999,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 7 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1014,6 +1028,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 8 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1041,6 +1057,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 9 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1068,6 +1086,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 10 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1095,6 +1115,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 11 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1122,6 +1144,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 12 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1149,6 +1173,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 13 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1176,6 +1202,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 14 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1203,6 +1231,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 15 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1230,6 +1260,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 16 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1257,6 +1289,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 17 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1284,6 +1318,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 18 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1311,6 +1347,8 @@
       "</form>\n",
       "</div>\n",
       "</article>\n",
+      "[]\n",
+      "No match\n",
       "\n",
       " value of  i ############################## : 19 and result is :::::\n",
       " <article class=\"product_pod\">\n",
@@ -1337,24 +1375,33 @@
       "<button class=\"btn btn-primary btn-block\" data-loading-text=\"Adding...\" type=\"submit\">Add to basket</button>\n",
       "</form>\n",
       "</div>\n",
-      "</article>\n"
+      "</article>\n",
+      "[]\n",
+      "No match\n"
      ]
     }
    ],
    "source": [
     "prdlength = len(prd_pod)\n",
+    "import re\n",
     "for i in range(prdlength):\n",
     "    \n",
     "#     print(example.select(\".star-rating\"))\n",
     "    result = prd_pod[i]  \n",
-    "    print(f\"\\n value of  i ############################## : {i} and result is :::::\\n {result}\"\n",
-    "    \n"
+    "    print(f\"\\n value of  i ############################## : {i} and result is :::::\\n {result}\")\n",
+    "    \n",
+    "    ans = re.findall(\"Three|three\", result.text)\n",
+    "    print(ans)\n",
+    "    if (ans):\n",
+    "      print(\"Yes, there is at least one match!\")\n",
+    "    else:\n",
+    "      print(\"No match\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "brutal-butler",
+   "id": "female-wound",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "photographic-manor",
+   "id": "posted-welcome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electrical-billion",
+   "id": "natural-glenn",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1394,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "looking-brooklyn",
+   "id": "atomic-elimination",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1402,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "therapeutic-protest",
+   "id": "weighted-cookbook",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tracked-samba",
+   "id": "cosmetic-growth",
    "metadata": {},
    "outputs": [],
    "source": []
